chore: switch to java 25